--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -144,6 +144,7 @@
                         android:onClick="symClick"
                         android:text="."
                         android:textSize="20sp"
+                        android:visibility="invisible"
                         app:cornerRadius="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/btn0"
